	  - bug 185: --disable-shared not passed along to ldns included with 
	    unbound. Fixed so that configure parameters are passed to the
	    subdir configure script.
	    fixed that ./libtool is used always, you can still override
	    manually with ./configure libtool=mylibtool or set $libtool in
	    the environment.
	- update of the ldns tarball to current ldns svn version (fix 181).

23 May 2008: Wouter
	- mingw32 porting.
	  - test for sys/wait.h
	  - WSAEWOULDBLOCK test after nonblocking TCP connect.
	  - write_iov_buffer removed: unused and no struct iov on windows.
	  - signed/unsigned warning fixup mini_event.
	  - use ioctlsocket to set nonblocking I/O if fnctl is unavailable.
	  - skip signals that are not defined
	  - detect pwd.h.
	  - detect getpwnam, getrlimit, setsid, sbrk, chroot.
	  - default config has no chroot if chroot() unavailable.
	  - if no kill() then no pidfile is read or written.
	  - gmtime_r is replaced by nonthreadsafe alternative if unavail.
	    used in rrsig time validation errors.

22 May 2008: Wouter
	- contrib unbound.spec from Patrick Vande Walle.
	- fixup bug#175: call tzset before chroot to have correct timestamps
	  in system log.
	- do not generate lex input and lex unput functions.
	- mingw port. replacement functions labelled _unbound.
	- fix bug 174 - check for tcp_sigpipe that ldns-testns is installed.

19 May 2008: Wouter
	- fedora 9, check in6_pktinfo define in configure.
	- CREDITS fixup of history.
	- ignore ldns-1.2.2 if installed, use builtin 1.3.0-pre alternative.

16 May 2008: Wouter
	- fixup for MacOSX hosts file reading (reported by John Dickinson).
	- created 1.0.0 svn tag.
	- trunk version 1.0.1.

14 May 2008: Wouter
	- accepted patch from Ondrej Sury for library version libtool option.
	- configure --disable-rpath fixes up libtool for rpath trouble.
	  Adapted from debian package patch file.

13 May 2008: Wouter
	- Added root ipv6 addresses to builtin root hints.
	- TODO modified for post 1.0 plans.